[package]
exclude = ["target/"]
name = "authjar"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"
authors = ["CORUM COLLECTIVE LLC <engineering@corumcollective.com>"]
repository = "https://github.com/santhsecurity/authjar"
description = "Multi-cookie session management — parse Set-Cookie, domain-scoped storage, CSRF extraction, session persistence"
readme = "README.md"
keywords = ["cookie", "session", "http", "auth", "csrf", "web"]
categories = ["authentication", "web-programming"]

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.44", features = ["fs", "macros", "rt"], optional = true }
tracing = "0.1"
toml = { version = "0.9", features = ["serde"] }

[features]
tokio = ["dep:tokio"]
